Battery graph in QS Detail
Add new usage graph view to SettingsLib that shows usage with
same labels and whatnot.

Use that graph in the battery detail panel to show more stuffs.

Change-Id: I397b1314f65f668df566e93bdbc15420e1b3a280

Former-commit-id: 96ab63640f186dd7f983b35f2c4e1a95436e5052

--- a/packages/SettingsLib/res/values/attrs.xml
+++ b/packages/SettingsLib/res/values/attrs.xml
@@ -24,4 +24,11 @@
     </declare-styleable>
     <attr name="wifi_signal" format="reference" />
 
+    <declare-styleable name="UsageView">
+        <attr name="android:colorAccent" />
+        <attr name="sideLabels" format="reference" />
+        <attr name="bottomLabels" format="reference" />
+        <attr name="textColor" format="color" />
+    </declare-styleable>
+
 </resources>
