Fix up some small resource issues
- the "save" string is a duplicate, and is overriden by the next definition below it.
  Due to the way AAPT handles overlays, this was accepted.
- the style attribute should not start with '@'.
- the 'raw' type is reserved for file references. Values should not be 'raw'.

Change-Id: Id611d5915207ce624d7a743b5d79bbb1258d3d51

Former-commit-id: 4c44359d91c4b364a650799e93580eb5a066de7f

--- a/packages/SystemUI/res/values/styles.xml
+++ b/packages/SystemUI/res/values/styles.xml
@@ -300,7 +300,7 @@
     </style>
 
     <style name="TunerPreferenceTheme" parent="@android:style/Theme.Material.Settings">
-        <item name="@dropdownPreferenceStyle">@style/Preference.DropDown.Material</item>
+        <item name="dropdownPreferenceStyle">@style/Preference.DropDown.Material</item>
     </style>
 
     <style name="TextAppearance.NotificationGuts">
