Tweaking stack shadows and layout.
- Properly setting view outline alpha
- Ensuring that dismissing while in focused state will return to
  non-focused state
- Fixing mis-calculation with bottom stack area

Change-Id: I281b7707421ffde4225180c63c7d40bf325f7f72
Former-commit-id: 1499150478b2836a7d2549129ccaed005b24bc06

--- a/packages/SystemUI/res/values-sw720dp/dimens.xml
+++ b/packages/SystemUI/res/values-sw720dp/dimens.xml
@@ -31,6 +31,8 @@
 
     <!-- The radius of the rounded corners on a task view. -->
     <dimen name="recents_task_view_rounded_corners_radius">3dp</dimen>
+    <!-- The radius of the rounded corners on a task view's shadow. -->
+    <dimen name="recents_task_view_shadow_rounded_corners_radius">18dp</dimen>
 
     <!-- The fraction of the screen height where the clock on the Keyguard has its center. The
      max value is used when no notifications are displaying, and the min value is when the
