--- a/packages/SystemUI/res/layout/qs_panel.xml
+++ b/packages/SystemUI/res/layout/qs_panel.xml
@@ -30,4 +30,6 @@
 
     <include layout="@layout/quick_status_bar_expanded_header" />
 
+    <include android:id="@+id/qs_detail" layout="@layout/qs_detail" />
+
 </com.android.systemui.qs.QSContainer>
