Fixes and changes to support settings using UsageView
Bug: 27213136
Change-Id: I1796d710379fc92cf21b196459f34dda4570355f

Former-commit-id: a5d7dd9cd5401d430d7bdb942ed98eb1eb939d26

--- a/packages/SettingsLib/res/layout/usage_view.xml
+++ b/packages/SettingsLib/res/layout/usage_view.xml
@@ -17,10 +17,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingEnd="@dimen/usage_graph_padding_end"
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/graph_label_group"
         android:layout_width="match_parent"
         android:layout_height="@dimen/usage_graph_area_height"
         android:orientation="horizontal"
@@ -28,9 +28,9 @@
         android:clipToPadding="false">
 
         <LinearLayout
+            android:id="@+id/label_group"
             android:layout_width="@dimen/usage_graph_labels_width"
             android:layout_height="match_parent"
-            android:paddingStart="@dimen/usage_graph_labels_padding"
             android:orientation="vertical">
 
             <include android:id="@+id/label_top"
@@ -65,6 +65,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/bottom_label_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/usage_graph_labels_width"
