--- a/packages/SystemUI/res/values/attrs.xml
+++ b/packages/SystemUI/res/values/attrs.xml
@@ -75,6 +75,12 @@
         <attr name="horizontalSpacing" format="dimension" />
     </declare-styleable>
 
+    <declare-styleable name="AutoSizingList">
+        <!-- Whether AutoSizingList will show only as many items as fit on screen and
+             remove extra items instead of scrolling. -->
+        <attr name="enableAutoSizing" format="boolean" />
+    </declare-styleable>
+
     <!-- Theme for icons in the status bar (light/dark). background/fillColor is used for dual tone
          icons like wifi and signal, and singleToneColor is used for icons with only one tone.
          Contract: Pixel with fillColor blended over backgroundColor blended over translucent should
