Keep RemoteInputView visible when focused
Scrolls the NotificationStackScrollLayout in response to movement
to ensure that the focused view stays visible. Also makes sure that
the action list is always aligned at the bottom of the notification
to avoid jank during this scrolling when the height changes.

Fixes: 28193862
Fixes: 26919632
Change-Id: I911a873367fe26eafd9fae4bca4e693d0827eba7

Former-commit-id: 181385ce33c83a249087a1cff65870dfe120aae8

--- a/core/res/res/layout/notification_material_action_list.xml
+++ b/core/res/res/layout/notification_material_action_list.xml
@@ -21,7 +21,7 @@
     <com.android.internal.widget.NotificationActionListLayout
             android:id="@+id/actions"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="@dimen/notification_action_list_height"
             android:paddingEnd="4dp"
             android:orientation="horizontal"
             android:gravity="center_vertical"
